--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+  <link rel="stylesheet" href="./css/style.css">
+  <script src="./js/script.js"></script>
 </head>
 <body>
   <img id="train" src="https://js.cx/clipart/train.gif">
