--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <script src="./js/script.js"></script>
 </head>
 <body>
-  <img id="train" src="https://js.cx/clipart/train.gif">
+  <img id="train" src="https://js.cx/clipart/train.gif" onclick="f1()">
 </body>
 </html>
