--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <script src="./js/script.js"></script>
 </head>
 <body>
+  <p>Кликни по поровозу!</p>
   <img id="train" src="https://js.cx/clipart/train.gif" onclick="f1()">
 </body>
 </html>
